--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
             <p class="event waiting">Requesting Registration ID</p>
             <p class="event received">Registered</p>
         </div>
-		<div id="gcm_id"> registration id: </div>
+		<div> registration id: <input type="text" id="gcm_id"></div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
